welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: ';' expected but integer literal found.
	else if (vacation = true && (Int=1 || Int=2 ||Int=3 ||Int=4 || Int=5)) { return "10:00" }7
                                                                                                 ^